# buffr

./: .coverage  CHANGELOG.md  README.md  coverage.xml  pyproject.toml
.github/workflows/: release.yaml  release.yml
buffr/: buffers.py
test/: test_buffer.py  test_flushing.py  test_order.py
